--- a/package.json
+++ b/package.json
@@ -1,21 +1,25 @@
 {
-  "name": "deliverytime-dev",
+  "name": "deliverytime-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/cors": "^2.8.13",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.34",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
     "axios": "^0.27.2",
+    "cors": "^2.8.5",
+    "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.9.0",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.11.2",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.3",
     "styled-components": "^5.3.11",
     "styled-normalize": "^8.0.7",
     "typescript": "^4.9.5",
@@ -57,5 +61,10 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "json-server": "^0.17.3",
     "prettier": "^2.8.8"
-  }
+  },
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
